force-app/main/default/objects/PVLErrorHandler__e/PVLErrorHandler__e.object-meta.xml
<CustomObject>
    <description>Used to handle errors</description>
    <label>PVL Error Handler</label>
    <pluralLabel>PVL Error Handlers</pluralLabel>
</CustomObject>