force-app/main/default/objects/PVLErrorHandler__e/fields/Debug_Level__c.field-meta.xml
<CustomField>
    <fullName>Debug_Level__c</fullName>
    <label>Debug Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>