force-app/main/default/objects/PVLErrorHandler__e/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>