force-app/main/default/objects/PVLErrorHandler__e/fields/Reference_Info__c.field-meta.xml
<CustomField>
    <fullName>Reference_Info__c</fullName>
    <label>Reference Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>